refactor: optimized channel definition and memory service processing